# WordProcessor

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.ps1  build.sh
.github/workflows/: build-cpp.yaml
challenge/: buggy.cxx
docs/: DESIGN.md  wordprocessor-sequence-workflow.puml
include/wordtool/: safe_queue.h  word.h  word_list.h  word_processor.h
src/wordtool/: main.cpp  safe_queue.cpp  word.cpp  word_list.cpp  word_processor.cpp
tests/: CMakeLists.txt  unit_test.cmake
tests/SafeQueue_UT/: CMakeLists.txt  SafeQueue_UT.cpp
tests/WordList_UT/: CMakeLists.txt  WordList_UT.cpp
tests/WordProcessor_UT/: CMakeLists.txt  WordProcessor_UT.cpp
tests/Word_UT/: CMakeLists.txt  Word_UT.cpp
